# docker-tutorial

./: Makefile  README.md
backend/: pyproject.toml
lesson1/: Dockerfile  Justfile  Makefile  docker-compose.yaml  pyproject.toml
lesson1/backend/: app.py
