[tool.poetry]
name = "backend"
version = "0.1.0"
description = "docker tutorial"
authors = ["Schwannden Kuo <schwannden@mobagel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
