[tool.poetry]
name = "backend"
version = "0.1.0"
description = "docker tutorial"
authors = ["LoKing23 <mongrock30102@gmail.comm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
